locked classes 2 through 12

--- a/public/synergy.html
+++ b/public/synergy.html
@@ -51,11 +51,11 @@
     <h2 class="dsk-circle-title">Class 2</h2>
     <div class="dsk-content">
       <div class="dsk-info">
-        <h2>Stylish Appearance </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Read More</a> 
+        <h2>Class 2</h2>
+        <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+        <a href="#" class="dsk-link">OK</a> 
       </div>
-      <img src="images/2.png" alt="" /> 
+      <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
     </div>
   </div>
   <div class="step">
@@ -63,11 +63,11 @@
     <h2 class="dsk-circle-title">Class 3</h2>
     <div class="dsk-content">
       <div class="dsk-info">
-        <h2>Stylish Appearance </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Read More</a> 
+        <h2>Class 3</h2>
+        <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+        <a href="#" class="dsk-link">OK</a> 
       </div>
-      <img src="images/2.png" alt="" /> 
+      <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
     </div>
   </div>
   <div class="step">
@@ -75,11 +75,11 @@
     <h2 class="dsk-circle-title">Class 4</h2>
     <div class="dsk-content">
       <div class="dsk-info">
-        <h2>Stylish Appearance </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Read More</a> 
+        <h2>Class 4</h2>
+        <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+        <a href="#" class="dsk-link">OK</a> 
       </div>
-      <img src="images/2.png" alt="" /> 
+      <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
     </div>
   </div>
   <div class="step">
@@ -87,11 +87,11 @@
     <h2 class="dsk-circle-title">Class 5</h2>
     <div class="dsk-content">
       <div class="dsk-info">
-        <h2>Stylish Appearance </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Read More</a> 
+        <h2>Class 5</h2>
+        <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+        <a href="#" class="dsk-link">OK</a> 
       </div>
-      <img src="images/2.png" alt="" /> 
+      <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
     </div>
   </div>
   <div class="step">
@@ -99,11 +99,11 @@
     <h2 class="dsk-circle-title">Class 6</h2>
     <div class="dsk-content">
       <div class="dsk-info">
-        <h2>Stylish Appearance </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Read More</a> 
+        <h2>Class 6</h2>
+        <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+        <a href="#" class="dsk-link">OK</a> 
       </div>
-      <img src="images/2.png" alt="" /> 
+      <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
     </div>
   </div>
   <div class="step">
@@ -111,11 +111,11 @@
     <h2 class="dsk-circle-title">Class 7</h2>
     <div class="dsk-content">
       <div class="dsk-info">
-        <h2>Stylish Appearance </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Read More</a> 
+        <h2>Class 7</h2>
+        <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+        <a href="#" class="dsk-link">OK</a> 
       </div>
-      <img src="images/2.png" alt="" /> 
+      <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
     </div>
   </div>
   <div class="step">
@@ -123,11 +123,11 @@
     <h2 class="dsk-circle-title">Class 8</h2>
     <div class="dsk-content">
       <div class="dsk-info">
-        <h2>Stylish Appearance </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Read More</a> 
+        <h2>Class 8</h2>
+        <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+        <a href="#" class="dsk-link">OK</a> 
       </div>
-      <img src="images/2.png" alt="" /> 
+      <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
     </div>
   </div>
   <div class="step">
@@ -135,11 +135,11 @@
     <h2 class="dsk-circle-title">Class 9</h2>
     <div class="dsk-content">
       <div class="dsk-info">
-        <h2>Stylish Appearance </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Read More</a> 
+        <h2>Class 9</h2>
+        <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+        <a href="#" class="dsk-link">OK</a> 
       </div>
-      <img src="images/2.png" alt="" /> 
+      <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
     </div>
   </div>
   <div class="step">
@@ -147,11 +147,11 @@
     <h2 class="dsk-circle-title">Class 10</h2>
     <div class="dsk-content">
       <div class="dsk-info">
-        <h2>Stylish Appearance </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Read More</a> 
+        <h2>Class 10</h2>
+        <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+        <a href="#" class="dsk-link">OK</a> 
       </div>
-      <img src="images/2.png" alt="" /> 
+      <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
     </div>
   </div>
   <div class="step">
@@ -159,11 +159,11 @@
     <h2 class="dsk-circle-title">Class 11</h2>
     <div class="dsk-content">
       <div class="dsk-info">
-        <h2>Stylish Appearance </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Read More</a> 
+        <h2>Class 11</h2>
+        <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+        <a href="#" class="dsk-link">OK</a> 
       </div>
-      <img src="images/2.png" alt="" /> 
+      <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
     </div>
   </div>
   <div class="step">
@@ -171,11 +171,11 @@
     <h2 class="dsk-circle-title">Class 12</h2>
     <div class="dsk-content">
       <div class="dsk-info">
-        <h2>Stylish Appearance </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Read More</a> 
+        <h2>Class 12</h2>
+        <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+        <a href="#" class="dsk-link">OK</a> 
       </div>
-      <img src="images/2.png" alt="" /> 
+      <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
     </div>
   </div>
   
