finished chal1ext

--- a/public/class1.html
+++ b/public/class1.html
@@ -45,7 +45,7 @@
                 <li>Change the background color on both of the buttons</li>
                 <li>Change the font color on both of the buttons</li>
               </ul>
-              <p>Once you're done, take a screenshot of your page and email it to <a href="mailto:review@mushroomlearning.com?Subject=Challenge%201" target="_blank">review@mushroomlearning.com</a></p>
+              <p>Once you're done, take a screenshot of your page and email it to <a href="mailto:review@mushroomlearning.com?Subject=Challenge%201" target="_blank">review@mushroomlearning.com</a> with the subject line "Challenge 1"</p>
             </div>
           </li>
           <li>
