--- a/public/class1ext.html
+++ b/public/class1ext.html
@@ -25,17 +25,17 @@
             <time class="cbp_tmtime"><span>Challenge</span></time>
 
             <div class="cbp_tmlabel">
-              <h2>Try this!</h2>
-              <p>Go to <a href="//www.google.com" target="_blank">Google's website</a> and using inspector, make changes to the elements on the page to make something unique. Here's an example:</p>
-              <img src="assets/images/challenge-pics/chal1.png" alt="Challenge 1">
+              <h2>Try this more difficult challenge!</h2>
+              <p>Go to <a href="//www.espnfc.us" target="_blank">ESPN FC's website</a> and using inspector, make changes to the elements on the page to make something unique. Pick a superhero, cartoon character, actor, or athlete as a theme. Here's an example:</p>
+              <img src="assets/images/challenge-pics/chal1ext.png" alt="Challenge 1 Extension">
               <p>Requirements</p>
               <ul>
-                <li>Change the Google logo to a custom image</li>
-                <li>Change the text on both of the buttons</li>
-                <li>Change the background color on both of the buttons</li>
-                <li>Change the font color on both of the buttons</li>
+                <li>Change the main image on the page</li>
+                <li>Change all the text on the page</li>
+                <li>Change background color of the navigation bar</li>
+                <li>Change the font color in the navigation bar</li>
               </ul>
-              <p>Once you're done, take a screenshot of your page and email it to <a href="mailto:review@mushroomlearning.com?Subject=Challenge%201" target="_blank">review@mushroomlearning.com</a></p>
+              <p>Once you're done, take a screenshot of your page and email it to <a href="mailto:review@mushroomlearning.com?Subject=Challenge%201%20Extension" target="_blank">review@mushroomlearning.com</a> with the subject line "Challenge 1 Extension"</p>
             </div>
           </li>
         </ul>
