added another requirement to chal1ext

--- a/public/class1ext.html
+++ b/public/class1ext.html
@@ -34,6 +34,7 @@
                 <li>Change all the text on the page</li>
                 <li>Change background color of the navigation bar</li>
                 <li>Change the font color in the navigation bar</li>
+                <li>Set the opacity of the top score ticker to zero</li>
               </ul>
               <p>Once you're done, take a screenshot of your page and email it to <a href="mailto:review@mushroomlearning.com?Subject=Challenge%201%20Extension" target="_blank">review@mushroomlearning.com</a> with the subject line "Challenge 1 Extension"</p>
             </div>
