--- a/public/class1.html
+++ b/public/class1.html
@@ -70,6 +70,21 @@
 
             </div>
           </li>
+          <li>
+            <time class="cbp_tmtime"><span>Homework</span></time>
+
+            <div class="cbp_tmlabel">
+              <h2>Do this before next class!</h2>
+              <p>Pick a category, either books or movies and do the following:</p>
+              <ol>
+                <li>Make a list of your 3 favorites in your category. For example, if I picked books, I would make a list of my 3 favorite books.</li>
+                <li>Write at least one sentence on why each of the items made it on your favorites list</li>
+                <li>Using Google image search, find a nice picture of each or your 3 favorites</li>
+              </ol>
+              <p>Once you're done, take a screenshot of your page and email it to <a href="mailto:review@mushroomlearning.com?Subject=Homework%201" target="_blank">review@mushroomlearning.com</a> with the subject line "Homework 1"</p>
+              <p><strong>Due before midnight on Wednesday, October 29.</strong></p>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
