--- a/public/synergy.html
+++ b/public/synergy.html
@@ -41,7 +41,7 @@
         <h2>Class 1 -- Getting Started</h2>
         <p>We're going to spend Class 1 playing with Chrome Inspector and setting up your Github account!</p>
         <a href="/class1" class="dsk-link">Required</a> 
-        <a href="/class1ext" class="dsk-link">Extensions</a> 
+        <a href="/class1ext" class="dsk-link">Bonus</a> 
       </div>
       <img src="assets/images/timeline-thumbnails/day1.png" alt="" /> 
     </div>
@@ -52,10 +52,11 @@
     <div class="dsk-content">
       <div class="dsk-info">
         <h2>Class 2</h2>
-        <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-        <a href="#" class="dsk-link">OK</a> 
+        <p>Last class we took an existing site and swapped out certain elements. In this class, you will start learning how to write HTML and CSS from scratch!</p>
+        <a href="/class2" class="dsk-link">Required</a> 
+        <a href="/class2ext" class="dsk-link">Bonus</a> 
       </div>
-      <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+      <img src="assets/images/timeline-thumbnails/day2.png" alt="" /> 
     </div>
   </div>
   <div class="step">
