--- a/public/class2.html
+++ b/public/class2.html
@@ -29,36 +29,9 @@
             <time class="cbp_tmtime"><span>Video</span></time>
             <div class="cbp_tmicon cbp_tmicon-phone"></div>
             <div class="cbp_tmlabel">
-              <h2>Watch this!</h2>
+              <h2>Codio and Boilerplate</h2>
               <div class="videoWrapper">
-                <iframe width="560" height="315" src="//www.youtube.com/embed/q1o87Djk5wA?rel=0" frameborder="0" allowfullscreen></iframe>
-              </div>
-            </div>
-          </li>
-          <li>
-            <time class="cbp_tmtime"><span>Challenge</span></time>
-
-            <div class="cbp_tmlabel">
-              <h2>Try this!</h2>
-              <p>Go to <a href="//www.google.com" target="_blank">Google's website</a> and using inspector, make changes to the elements on the page to make something unique. Here's an example:</p>
-              <img src="assets/images/challenge-pics/chal1.png" alt="Challenge 1">
-              <p>Requirements</p>
-              <ul>
-                <li>Change the Google logo to a custom image</li>
-                <li>Change the text on both of the buttons</li>
-                <li>Change the background color on both of the buttons</li>
-                <li>Change the font color on both of the buttons</li>
-              </ul>
-              <p>Once you're done, take a screenshot of your page and email it to <a href="mailto:review@mushroomlearning.com?Subject=Challenge%201" target="_blank">review@mushroomlearning.com</a> with the subject line "Challenge 1"</p>
-            </div>
-          </li>
-          <li>
-            <time class="cbp_tmtime"><span>Register</span></time>
-
-            <div class="cbp_tmlabel">
-              <h2>Sign up for Github!</h2>
-              <div class="videoWrapper">
-                <iframe width="560" height="315" src="//www.youtube.com/embed/O9VTcCHRkq4?rel=0" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="//www.youtube.com/embed/1_Oek5VcEYE?rel=0" frameborder="0" allowfullscreen></iframe>
               </div>
             </div>
           </li>
@@ -68,10 +41,54 @@
             <div class="cbp_tmlabel">
               <h2>Answer these!</h2>
               <!-- Change the width and height values to suit you best -->
-              <div class="typeform-widget" data-url="https://mushroomlearning.typeform.com/to/aCLkeq" data-text="quiz1" style="width:100%;height:500px;"></div>
+              <div class="typeform-widget" data-url="https://mushroomlearning.typeform.com/to/N9moxL" data-text="Boilerplate quiz" style="width:100%;height:500px;"></div>
               <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
-              <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by <a href="http://www.typeform.com/?utm_campaign=typeform_aCLkeq&amp;utm_source=website&amp;utm_medium=typeform&amp;utm_content=typeform-embedded&amp;utm_term=English" style="color: #999" target="_blank">Typeform</a></div>
+              <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by <a href="http://www.typeform.com/?utm_campaign=typeform_N9moxL&amp;utm_source=website&amp;utm_medium=typeform&amp;utm_content=typeform-embedded&amp;utm_term=English" style="color: #999" target="_blank">Typeform</a></div>
 
+
+            </div>
+          </li>
+          <li>
+            <time class="cbp_tmtime"><span>Video</span></time>
+            <div class="cbp_tmicon cbp_tmicon-phone"></div>
+            <div class="cbp_tmlabel">
+              <h2>Intro to Tags</h2>
+              <div class="videoWrapper">
+                <iframe width="560" height="315" src="//www.youtube.com/embed/OKIlC3Gn43k?rel=0" frameborder="0" allowfullscreen></iframe>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <time class="cbp_tmtime"><span>QA</span></time>
+
+            <div class="cbp_tmlabel">
+              <h2>Answer these!</h2>
+              <!-- Change the width and height values to suit you best -->
+              <div class="typeform-widget" data-url="https://mushroomlearning.typeform.com/to/dtBymo" data-text="intro to tags" style="width:100%;height:500px;"></div>
+              <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+              <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by <a href="http://www.typeform.com/?utm_campaign=typeform_dtBymo&amp;utm_source=website&amp;utm_medium=typeform&amp;utm_content=typeform-embedded&amp;utm_term=English" style="color: #999" target="_blank">Typeform</a></div>
+
+
+
+            </div>
+          </li>
+          <li>
+            <time class="cbp_tmtime"><span>Challenge 2</span></time>
+
+            <div class="cbp_tmlabel">
+              <h2>Try this!</h2>
+              <p>Using <a href="//www.codio.com" target="_blank">Codio</a> create a website that is structured like the following:</p>
+              <img src="assets/images/challenge-pics/chal2.png" alt="Challenge 2">
+              <p>Requirements</p>
+              <ul>
+                <li>Start with adding a background to the page</li>
+                <li>Change the color of all the text on the page</li>
+                <li>Set the all the images to the same pixel width</li>
+                <li>Set all of the p tags to the same pixel width</li>
+              </ul>
+              <p>Once you're done, add "Mushroom Review" to the project's permissions. See the gif below for how to change a project's permissions.</p>
+              <img src="assets/images/challenge-pics/permissions.gif" alt="Codio Permissions">
             </div>
           </li>
           <li>
@@ -79,17 +96,18 @@
 
             <div class="cbp_tmlabel">
               <h2>Do this before next class!</h2>
-              <p>Pick a category, either books or movies and do the following:</p>
+              <p>Find a recipe of your favorite dessert.</p>
               <ol>
-                <li>Make a list of your 3 favorites in your category. For example, if I picked books, I would make a list of my 3 favorite books.</li>
-                <li>Write at least one sentence on why each of the items made it on your favorites list</li>
-                <li>Using Google image search, find a nice picture of each or your 3 favorites</li>
+                <li>Make a list of all the ingredients needed to make the dessert</li>
+                <li>Make a list of all the steps needed to make the dessert</li>
+                <li>Using Google image search, find the <strong>image url</strong> of a nice picture of the dessert. Note that I want the image url, not the actual image.</li>
               </ol>
-              <p>Once you're done, take a screenshot of your page and email it to <a href="mailto:review@mushroomlearning.com?Subject=Homework%201" target="_blank">review@mushroomlearning.com</a> with the subject line "Homework 1"</p>
-              <p><strong>Due before midnight on Wednesday, October 29.</strong></p>
+              <p>Once you're done, send it to <a href="mailto:review@mushroomlearning.com?Subject=Homework%201" target="_blank">review@mushroomlearning.com</a> with the subject line "Homework 2"</p>
+              <p><strong>Due before midnight on Wednesday, November 5.</strong></p>
             </div>
           </li>
         </ul>
+
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingOne">
