--- a/public/synergy.html
+++ b/public/synergy.html
@@ -54,7 +54,7 @@
         <h2>Class 2</h2>
         <p>Last class we took an existing site and swapped out certain elements. In this class, you will start learning how to write HTML and CSS from scratch!</p>
         <a href="/class2" class="dsk-link">Required</a> 
-        <a href="/class2ext" class="dsk-link">Bonus</a> 
+        <a href="/#" class="dsk-link">Bonus</a> 
       </div>
       <img src="assets/images/timeline-thumbnails/day2.png" alt="" /> 
     </div>
