--- a/public/demo.html
+++ b/public/demo.html
@@ -22,17 +22,22 @@
   <!-- Modal -->
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content">
+      <div class="modal-content" id="modal-custom">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-          <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+          <button type="button" class="close" data-dismiss="modal" id="close-custom"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <img src="assets/images/logo.png" alt="Mushroom Learning Logo"/>
         </div>
+
+
         <div class="modal-body">
-          ...
+          <div class="videoWrapper">
+          <iframe width="560" height="315" src="//www.youtube.com/embed/q1o87Djk5wA?rel=0" frameborder="0" allowfullscreen></iframe>
         </div>
-        <div class="modal-footer">
+          <img src="assets/images/click-to-nav.gif" alt="Click to Navigate" />
+          <p>Please click on the dates </p>
+          <img src="assets/images/arrows-to-nav.gif" alt="Arrows to Navigate" />
+          <p>Or use your keyboard arrows to navigate</p>
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
@@ -204,8 +209,8 @@
   <script type="text/javascript" src="assets/js/dasky.js"></script>
   <script type="text/javascript">
   $(window).load(function(){
-        $('#myModal').modal('show');
-    });
+    $('#myModal').modal('show');
+  });
 
   $(function(){
     $('#dasky').Dasky({autoplay:false,nav:false});
