--- a/public/demo.html
+++ b/public/demo.html
@@ -1,224 +1,232 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Mushroom Learning -- Synergy Quantum</title>
-    <link rel="stylesheet" href="assets/styles/css/dasky.min.css" />
-    <link rel="stylesheet" href="assets/styles/css/theme.css" />
-    <link rel="stylesheet" href="assets/styles/css/bootstrap.min.css" />
-    <style type="text/css">
-      @import url(http://fonts.googleapis.com/css?family=Droid+Sans);
-      html,body
-      {
-        margin:0;
-        padding:0;
-        font-family: 'Droid Sans', sans-serif;
-      }
-    </style>
-    <script type="text/javascript" src="assets/js/jquery-1.10.1.min.js"></script>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Mushroom Learning -- Synergy Quantum</title>
+  <link rel="stylesheet" href="assets/styles/css/dasky.min.css" />
+  <link rel="stylesheet" href="assets/styles/css/theme.css" />
+  <link rel="stylesheet" href="assets/styles/css/bootstrap.min.css" />
+  <style type="text/css">
+  @import url(http://fonts.googleapis.com/css?family=Droid+Sans);
+  html,body
+  {
+    margin:0;
+    padding:0;
+    font-family: 'Droid Sans', sans-serif;
+  }
+  </style>
+  <script type="text/javascript" src="assets/js/jquery-1.10.1.min.js"></script>
 
-    <script>
-      if(window.innerHeight > window.innerWidth){
-        alert("For the best experience, please use landscape orientation.");
-      }
-      $(window).load(function(){
-        $('#myModal').modal('show');
-      });
-        $(function(){
-          $('#dasky').Dasky({autoplay:false,nav:false});
-        });
-    </script>
-  </head>
-  <body>
-    <!-- Button trigger modal -->
+  <script>
+  if(window.innerHeight > window.innerWidth){
+    alert("For the best experience, please use landscape orientation.");
+  }
+  $(window).load(function(){
+    $('#myModal').modal('show');
+  });
+  $(function(){
+    $('#dasky').Dasky({autoplay:false,nav:false});
+  });
+  </script>
+</head>
+<body>
+  <!-- Button trigger modal -->
 
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="vertical-alignment-helper">
-        <div class="modal-dialog vertical-align-center">
-          <div class="modal-content" id="modal-custom">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" id="close-custom"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-              <img src="assets/images/logo.png" alt="Mushroom Learning Logo"/>
-            </div>
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="vertical-alignment-helper">
+      <div class="modal-dialog vertical-align-center">
+        <div class="modal-content" id="modal-custom">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" id="close-custom"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <img src="assets/images/logo.png" alt="Mushroom Learning Logo"/>
+          </div>
 
 
-            <div class="modal-body">
-              <h2>Welcome to Mushroom Learning!</h2>
-              <img src="assets/images/click-to-nav.gif" alt="Click to Navigate" />
-              <p>Please click on the dates </p>
-              <img src="assets/images/arrows-to-nav.gif" alt="Arrows to Navigate" />
-              <p>Or use your keyboard arrows to navigate</p>
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
+          <div class="modal-body">
+            <h2>Welcome to Mushroom Learning!</h2>
+            <img src="assets/images/click-to-nav.gif" alt="Click to Navigate" />
+            <p>Please click on the dates </p>
+            <img src="assets/images/arrows-to-nav.gif" alt="Arrows to Navigate" />
+            <p>Or use your keyboard arrows to navigate</p>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
 
-    <div id="dasky">
+  <div id="dasky">
 
-      <img src="assets/images/logo.png" alt="Mushroom Learning Logo" id="timeline-logo"/>
-      <div class="step year">
-        <div class="dsk-titlenode"> Welcome </div>
-        <div class="dsk-content" id="welcome">
-          <img src="assets/images/welcome.png" alt=""/>
-          <p class="dsk-year-info">Welcome to Mushroom Learning's Web Development course!</p>
-          <p class="dsk-year-info">If you have any questions, please email <a href="mailto:hello@mushroomlearning.com" target="_blank">hello@mushroomlearning.com</a></p>
-        </div>
-      </div>
-      <div class="step">
-        <div class="dsk-circle dsk-circle-highlight">10/27</div>
-        <div class="dsk-content">
-          <div class="dsk-info">
-            <h2>Class 1 -- Getting Started</h2>
-            <p>We're going to spend Class 1 playing with Chrome Inspector and setting up your Github account!</p>
-            <a href="/class1" class="dsk-link">Required</a> 
-            <a href="/class1ext" class="dsk-link">Bonus</a> 
+    <a href="/"><img src="assets/images/logo.png" alt="Mushroom Learning Logo" id="timeline-logo"/></a>
+    <div class="step year">
+      <div class="dsk-titlenode">Welcome</div>
+      <img src="assets/images/logo-transparent-x-small.png" alt="" />
+      <div class="dsk-content" id="welcome">
+        <div class="small-video">
+          <div class="videoWrapper">
+            <iframe src="//www.youtube.com/embed/q1o87Djk5wA?rel=0" frameborder="0" allowfullscreen></iframe>
           </div>
-          <img src="assets/images/timeline-thumbnails/day1.png" alt="" /> 
+        </div>
+        <div id="welcome-text">
+          <p>Welcome to Web Development with Mushroom Learning!</p>
+          <p>If you have questions, please email us!</p>
+          <p><a href="mailto:hello@mushroomlearning.com" target="_blank">hello@mushroomlearning.com</a></p>
         </div>
       </div>
-      <div class="step">
-        <div class="dsk-circle dsk-circle-highlight">10/30</div>
-        <h2 class="dsk-circle-title">Class 2</h2>
-        <div class="dsk-content">
-          <div class="dsk-info">
-            <h2>Class 2</h2>
-            <p>Last class we took an existing site and swapped out certain elements. In this class, you will start learning how to write HTML and CSS from scratch!</p>
-            <a href="/class2" class="dsk-link">Required</a> 
-            <a href="/#" class="dsk-link">Bonus</a> 
-          </div>
-          <img src="assets/images/timeline-thumbnails/day2.png" alt="" /> 
+    </div>
+    <div class="step">
+      <div class="dsk-circle dsk-circle-highlight">10/27</div>
+      <div class="dsk-content">
+        <div class="dsk-info">
+          <h2>Class 1 -- Getting Started</h2>
+          <p>We're going to spend Class 1 playing with Chrome Inspector and setting up your Github account!</p>
+          <a href="/class1" class="dsk-link">Required</a> 
+          <a href="/class1ext" class="dsk-link">Bonus</a> 
         </div>
+        <img src="assets/images/timeline-thumbnails/day1.png" alt="" /> 
       </div>
-      <div class="step">
-        <div class="dsk-circle">11/6</div>
-        <h2 class="dsk-circle-title">Class 3</h2>
-        <div class="dsk-content">
-          <div class="dsk-info">
-            <h2>Class 3</h2>
-            <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-            <a href="#" class="dsk-link">OK</a> 
-          </div>
-          <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+    </div>
+    <div class="step">
+      <div class="dsk-circle dsk-circle-highlight">10/30</div>
+      <h2 class="dsk-circle-title">Class 2</h2>
+      <div class="dsk-content">
+        <div class="dsk-info">
+          <h2>Class 2</h2>
+          <p>Last class we took an existing site and swapped out certain elements. In this class, you will start learning how to write HTML and CSS from scratch!</p>
+          <a href="/class2" class="dsk-link">Required</a> 
+          <a href="/#" class="dsk-link">Bonus</a> 
         </div>
+        <img src="assets/images/timeline-thumbnails/day2.png" alt="" /> 
       </div>
-      <div class="step">
-        <div class="dsk-circle">11/7</div>
-        <h2 class="dsk-circle-title">Class 4</h2>
-        <div class="dsk-content">
-          <div class="dsk-info">
-            <h2>Class 4</h2>
-            <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-            <a href="#" class="dsk-link">OK</a> 
-          </div>
-          <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+    </div>
+    <div class="step">
+      <div class="dsk-circle">11/6</div>
+      <h2 class="dsk-circle-title">Class 3</h2>
+      <div class="dsk-content">
+        <div class="dsk-info">
+          <h2>Class 3</h2>
+          <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+          <a href="#" class="dsk-link">OK</a> 
         </div>
+        <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
       </div>
-      <div class="step">
-        <div class="dsk-circle">11/13</div>
-        <h2 class="dsk-circle-title">Class 5</h2>
-        <div class="dsk-content">
-          <div class="dsk-info">
-            <h2>Class 5</h2>
-            <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-            <a href="#" class="dsk-link">OK</a> 
-          </div>
-          <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+    </div>
+    <div class="step">
+      <div class="dsk-circle">11/7</div>
+      <h2 class="dsk-circle-title">Class 4</h2>
+      <div class="dsk-content">
+        <div class="dsk-info">
+          <h2>Class 4</h2>
+          <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+          <a href="#" class="dsk-link">OK</a> 
         </div>
+        <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
       </div>
-      <div class="step">
-        <div class="dsk-circle">11/14</div>
-        <h2 class="dsk-circle-title">Class 6</h2>
-        <div class="dsk-content">
-          <div class="dsk-info">
-            <h2>Class 6</h2>
-            <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-            <a href="#" class="dsk-link">OK</a> 
-          </div>
-          <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+    </div>
+    <div class="step">
+      <div class="dsk-circle">11/13</div>
+      <h2 class="dsk-circle-title">Class 5</h2>
+      <div class="dsk-content">
+        <div class="dsk-info">
+          <h2>Class 5</h2>
+          <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+          <a href="#" class="dsk-link">OK</a> 
         </div>
+        <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
       </div>
-      <div class="step">
-        <div class="dsk-circle">11/20</div>
-        <h2 class="dsk-circle-title">Class 7</h2>
-        <div class="dsk-content">
-          <div class="dsk-info">
-            <h2>Class 7</h2>
-            <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-            <a href="#" class="dsk-link">OK</a> 
-          </div>
-          <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+    </div>
+    <div class="step">
+      <div class="dsk-circle">11/14</div>
+      <h2 class="dsk-circle-title">Class 6</h2>
+      <div class="dsk-content">
+        <div class="dsk-info">
+          <h2>Class 6</h2>
+          <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+          <a href="#" class="dsk-link">OK</a> 
         </div>
+        <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
       </div>
-      <div class="step">
-        <div class="dsk-circle">11/21</div>
-        <h2 class="dsk-circle-title">Class 8</h2>
-        <div class="dsk-content">
-          <div class="dsk-info">
-            <h2>Class 8</h2>
-            <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-            <a href="#" class="dsk-link">OK</a> 
-          </div>
-          <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+    </div>
+    <div class="step">
+      <div class="dsk-circle">11/20</div>
+      <h2 class="dsk-circle-title">Class 7</h2>
+      <div class="dsk-content">
+        <div class="dsk-info">
+          <h2>Class 7</h2>
+          <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+          <a href="#" class="dsk-link">OK</a> 
         </div>
+        <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
       </div>
-      <div class="step">
-        <div class="dsk-circle">12/4</div>
-        <h2 class="dsk-circle-title">Class 9</h2>
-        <div class="dsk-content">
-          <div class="dsk-info">
-            <h2>Class 9</h2>
-            <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-            <a href="#" class="dsk-link">OK</a> 
-          </div>
-          <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+    </div>
+    <div class="step">
+      <div class="dsk-circle">11/21</div>
+      <h2 class="dsk-circle-title">Class 8</h2>
+      <div class="dsk-content">
+        <div class="dsk-info">
+          <h2>Class 8</h2>
+          <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+          <a href="#" class="dsk-link">OK</a> 
         </div>
+        <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
       </div>
-      <div class="step">
-        <div class="dsk-circle">12/5</div>
-        <h2 class="dsk-circle-title">Class 10</h2>
-        <div class="dsk-content">
-          <div class="dsk-info">
-            <h2>Class 10</h2>
-            <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-            <a href="#" class="dsk-link">OK</a> 
-          </div>
-          <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+    </div>
+    <div class="step">
+      <div class="dsk-circle">12/4</div>
+      <h2 class="dsk-circle-title">Class 9</h2>
+      <div class="dsk-content">
+        <div class="dsk-info">
+          <h2>Class 9</h2>
+          <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+          <a href="#" class="dsk-link">OK</a> 
         </div>
+        <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
       </div>
-      <div class="step">
-        <div class="dsk-circle">12/11</div>
-        <h2 class="dsk-circle-title">Class 11</h2>
-        <div class="dsk-content">
-          <div class="dsk-info">
-            <h2>Class 11</h2>
-            <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-            <a href="#" class="dsk-link">OK</a> 
-          </div>
-          <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+    </div>
+    <div class="step">
+      <div class="dsk-circle">12/5</div>
+      <h2 class="dsk-circle-title">Class 10</h2>
+      <div class="dsk-content">
+        <div class="dsk-info">
+          <h2>Class 10</h2>
+          <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+          <a href="#" class="dsk-link">OK</a> 
         </div>
+        <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
       </div>
-      <div class="step">
-        <div class="dsk-circle">12/12</div>
-        <h2 class="dsk-circle-title">Class 12</h2>
-        <div class="dsk-content">
-          <div class="dsk-info">
-            <h2>Class 12</h2>
-            <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-            <a href="#" class="dsk-link">OK</a> 
-          </div>
-          <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+    </div>
+    <div class="step">
+      <div class="dsk-circle">12/11</div>
+      <h2 class="dsk-circle-title">Class 11</h2>
+      <div class="dsk-content">
+        <div class="dsk-info">
+          <h2>Class 11</h2>
+          <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+          <a href="#" class="dsk-link">OK</a> 
         </div>
+        <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
       </div>
-
+    </div>
+    <div class="step">
+      <div class="dsk-circle">12/12</div>
+      <h2 class="dsk-circle-title">Class 12</h2>
+      <div class="dsk-content">
+        <div class="dsk-info">
+          <h2>Class 12</h2>
+          <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+          <a href="#" class="dsk-link">OK</a> 
+        </div>
+        <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+      </div>
     </div>
 
-    <script type="text/javascript" src="assets/js/jmpress.min.js"></script>
-    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/js/dasky.js"></script>
+  </div>
 
-  </body>
+  <script type="text/javascript" src="assets/js/jmpress.min.js"></script>
+  <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="assets/js/dasky.js"></script>
+
+</body>
 </html>
