--- a/public/class1.html
+++ b/public/class1.html
@@ -79,9 +79,9 @@
               <ol>
                 <li>Make a list of your 3 favorites in your category. For example, if I picked books, I would make a list of my 3 favorite books.</li>
                 <li>Write at least one sentence on why each of the items made it on your favorites list</li>
-                <li>Using Google image search, find a nice picture of each or your 3 favorites</li>
+                <li>Using Google image search, find a link to a picture of each of your 3 favorite things</li>
               </ol>
-              <p>Once you're done, take a screenshot of your page and email it to <a href="mailto:review@mushroomlearning.com?Subject=Homework%201" target="_blank">review@mushroomlearning.com</a> with the subject line "Homework 1"</p>
+              <p>Once you're done, email sentences and the links of the pictures to <a href="mailto:review@mushroomlearning.com?Subject=Homework%201" target="_blank">review@mushroomlearning.com</a> with the subject line "Homework 1"</p>
               <p><strong>Due before midnight on Wednesday, October 29.</strong></p>
             </div>
           </li>
