--- a/public/maimonides.html
+++ b/public/maimonides.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Mushroom Learning -- Synergy Quantum</title>
+<title>Mushroom Learning -- Maimonides Academy</title>
 <link rel="stylesheet" href="assets/styles/css/dasky.min.css" />
 <link rel="stylesheet" href="assets/styles/css/theme.css" />
 <script type="text/javascript" src="assets/js/jquery-1.10.1.min.js"></script>
@@ -35,7 +35,7 @@
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">10/27</div>
+    <div class="dsk-circle">11/5</div>
     <div class="dsk-content">
       <div class="dsk-info">
         <h2>Class 1 -- Getting Started</h2>
@@ -47,7 +47,7 @@
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">10/30</div>
+    <div class="dsk-circle">11/12</div>
     <h2 class="dsk-circle-title">Class 2</h2>
     <div class="dsk-content">
       <div class="dsk-info">
@@ -60,19 +60,19 @@
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">11/6</div>
+    <div class="dsk-circle">11/19</div>
     <h2 class="dsk-circle-title">Class 3</h2>
     <div class="dsk-content">
       <div class="dsk-info">
         <h2>Class 3</h2>
-        <p>In this project, you will learn how to make lists.</p>
-        <a href="/class3" class="dsk-link">Required</a> 
-        <a href="/#" class="dsk-link">Bonus</a>       </div>
-      <img src="assets/images/timeline-thumbnails/day3.png" alt="" /> 
+        <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
+        <a href="#" class="dsk-link">OK</a> 
+      </div>
+      <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">11/7</div>
+    <div class="dsk-circle">11/26</div>
     <h2 class="dsk-circle-title">Class 4</h2>
     <div class="dsk-content">
       <div class="dsk-info">
@@ -84,7 +84,7 @@
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">11/13</div>
+    <div class="dsk-circle">12/3</div>
     <h2 class="dsk-circle-title">Class 5</h2>
     <div class="dsk-content">
       <div class="dsk-info">
@@ -96,7 +96,7 @@
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">11/14</div>
+    <div class="dsk-circle">12/10</div>
     <h2 class="dsk-circle-title">Class 6</h2>
     <div class="dsk-content">
       <div class="dsk-info">
@@ -108,7 +108,7 @@
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">11/20</div>
+    <div class="dsk-circle">12/17</div>
     <h2 class="dsk-circle-title">Class 7</h2>
     <div class="dsk-content">
       <div class="dsk-info">
@@ -120,7 +120,7 @@
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">11/21</div>
+    <div class="dsk-circle">12/24</div>
     <h2 class="dsk-circle-title">Class 8</h2>
     <div class="dsk-content">
       <div class="dsk-info">
@@ -132,7 +132,7 @@
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">12/4</div>
+    <div class="dsk-circle">12/31</div>
     <h2 class="dsk-circle-title">Class 9</h2>
     <div class="dsk-content">
       <div class="dsk-info">
@@ -144,7 +144,7 @@
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">12/5</div>
+    <div class="dsk-circle">1/7</div>
     <h2 class="dsk-circle-title">Class 10</h2>
     <div class="dsk-content">
       <div class="dsk-info">
@@ -156,7 +156,7 @@
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">12/11</div>
+    <div class="dsk-circle">1/14</div>
     <h2 class="dsk-circle-title">Class 11</h2>
     <div class="dsk-content">
       <div class="dsk-info">
@@ -168,7 +168,7 @@
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">12/12</div>
+    <div class="dsk-circle">TBA</div>
     <h2 class="dsk-circle-title">Class 12</h2>
     <div class="dsk-content">
       <div class="dsk-info">
