--- a/public/class3.html
+++ b/public/class3.html
@@ -35,60 +35,24 @@
               </div>
             </div>
           </li>
-          <li>
-            <time class="cbp_tmtime"><span>QA</span></time>
 
-            <div class="cbp_tmlabel">
-              <h2>Answer these!</h2>
-              <!-- Change the width and height values to suit you best -->
-              <div class="typeform-widget" data-url="https://mushroomlearning.typeform.com/to/N9moxL" data-text="Boilerplate quiz" style="width:100%;height:500px;"></div>
-              <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
-              <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by <a href="http://www.typeform.com/?utm_campaign=typeform_N9moxL&amp;utm_source=website&amp;utm_medium=typeform&amp;utm_content=typeform-embedded&amp;utm_term=English" style="color: #999" target="_blank">Typeform</a></div>
-
-
-            </div>
-          </li>
-          <li>
-            <time class="cbp_tmtime"><span>Video</span></time>
-            <div class="cbp_tmicon cbp_tmicon-phone"></div>
-            <div class="cbp_tmlabel">
-              <h2>Intro to Tags</h2>
-              <div class="videoWrapper">
-                <iframe width="560" height="315" src="//www.youtube.com/embed/OKIlC3Gn43k?rel=0" frameborder="0" allowfullscreen></iframe>
-              </div>
-            </div>
-          </li>
-
-          <li>
-            <time class="cbp_tmtime"><span>QA</span></time>
-
-            <div class="cbp_tmlabel">
-              <h2>Answer these!</h2>
-              <!-- Change the width and height values to suit you best -->
-              <div class="typeform-widget" data-url="https://mushroomlearning.typeform.com/to/dtBymo" data-text="intro to tags" style="width:100%;height:500px;"></div>
-              <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
-              <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by <a href="http://www.typeform.com/?utm_campaign=typeform_dtBymo&amp;utm_source=website&amp;utm_medium=typeform&amp;utm_content=typeform-embedded&amp;utm_term=English" style="color: #999" target="_blank">Typeform</a></div>
-
-
-
-            </div>
-          </li>
           <li>
             <time class="cbp_tmtime"><span>Challenge 2</span></time>
 
             <div class="cbp_tmlabel">
               <h2>Try this!</h2>
               <p>Using <a href="//www.codio.com" target="_blank">Codio</a> create a website that is structured like the following:</p>
-              <img src="assets/images/challenge-pics/chal2.png" alt="Challenge 2">
+              <img src="assets/images/challenge-pics/chal3.png" alt="Challenge 3">
+              <br><br>
               <p>Requirements</p>
               <ul>
-                <li>Start with adding a background to the page</li>
-                <li>Change the color of all the text on the page</li>
-                <li>Set the all the images to the same pixel width</li>
-                <li>Set all of the p tags to the same pixel width</li>
+                <li>Use on of the h-tags for the page title</li>
+                <li>At least one ol and ul tag on the page</li>
+                <li>Use a smaller h-tag as a header for the ol and ul tags</li>
+                <li>At least one picture of your desert</li>
+                <li>Fix the width of the img and p tags so it doesn't look awkward</li>
               </ul>
-              <p>Once you're done, add "Mushroom Review" to the project's permissions. See the gif below for how to change a project's permissions.</p>
-              <img src="assets/images/challenge-pics/permissions.gif" alt="Codio Permissions">
+              
             </div>
           </li>
           <li>
@@ -96,14 +60,7 @@
 
             <div class="cbp_tmlabel">
               <h2>Do this before next class!</h2>
-              <p>Find a recipe of your favorite dessert.</p>
-              <ol>
-                <li>Make a list of all the ingredients needed to make the dessert</li>
-                <li>Make a list of all the steps needed to make the dessert</li>
-                <li>Using Google image search, find the <strong>image url</strong> of a nice picture of the dessert. Note that I want the image url, not the actual image.</li>
-              </ol>
-              <p>Once you're done, send it to <a href="mailto:review@mushroomlearning.com?Subject=Homework%201" target="_blank">review@mushroomlearning.com</a> with the subject line "Homework 2"</p>
-              <p><strong>Due before midnight on Wednesday, November 5.</strong></p>
+              <p>No homework today!</p>
             </div>
           </li>
         </ul>
