centering dates in dsk-circle

--- a/public/synergy.html
+++ b/public/synergy.html
@@ -35,7 +35,7 @@
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">10/27</div>
+    <div class="dsk-circle dsk-circle-highlight">10/27</div>
     <div class="dsk-content">
       <div class="dsk-info">
         <h2>Class 1 -- Getting Started</h2>
@@ -47,7 +47,7 @@
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">10/30</div>
+    <div class="dsk-circle dsk-circle-highlight">10/30</div>
     <h2 class="dsk-circle-title">Class 2</h2>
     <div class="dsk-content">
       <div class="dsk-info">
@@ -60,7 +60,7 @@
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">11/6</div>
+    <div class="dsk-circle dsk-circle-highlight">11/6</div>
     <h2 class="dsk-circle-title">Class 3</h2>
     <div class="dsk-content">
       <div class="dsk-info">
