one more day3 hw challenge requirement

--- a/public/class3.html
+++ b/public/class3.html
@@ -46,6 +46,7 @@
               <br><br>
               <p>Requirements</p>
               <ul>
+                <li>Use a pattern for the background</li>
                 <li>Use on of the h-tags for the page title</li>
                 <li>At least one ol and ul tag on the page</li>
                 <li>Use a smaller h-tag as a header for the ol and ul tags</li>
