changed button label

--- a/public/demo.html
+++ b/public/demo.html
@@ -127,7 +127,7 @@
       <div class="dsk-info">
         <h2>Midway Project</h2>
         <p>Click below to take a look at your midway project. Pick one of the rows and create a class yearbook based off of the styling. The CSS gets generally more difficult the lower the row is. Good luck!</p>
-        <a href="https://connect-kinetic.codio.io/public/index.html" target="_blank" class="dsk-link">OK</a> 
+        <a href="https://connect-kinetic.codio.io/public/index.html" target="_blank" class="dsk-link">Launch Page</a> 
       </div>
       <img src="assets/images/timeline-thumbnails/midway.png" alt="" /> 
     </div>
