--- a/public/demo.html
+++ b/public/demo.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width" />
   <title>Mushroom Learning -- Synergy Quantum</title>
   <link rel="stylesheet" href="assets/styles/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/styles/css/dasky.min.css" />
