--- a/public/class4.html
+++ b/public/class4.html
@@ -29,29 +29,48 @@
             <time class="cbp_tmtime"><span>Video</span></time>
             <div class="cbp_tmicon cbp_tmicon-phone"></div>
             <div class="cbp_tmlabel">
-              <h2>Lists</h2>
+              <h2>Centering things</h2>
               <div class="videoWrapper">
-                <iframe width="560" height="315" src="//www.youtube.com/embed/5EvUO9X-oPA?rel=0" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="//www.youtube.com/embed/8SPbDWk2PFM?rel=0" frameborder="0" allowfullscreen></iframe>
+              </div>
+            </div>
+          </li>
+          <li>
+            <time class="cbp_tmtime"><span>Video</span></time>
+            <div class="cbp_tmicon cbp_tmicon-phone"></div>
+            <div class="cbp_tmlabel">
+              <h2>Borders</h2>
+              <div class="videoWrapper">
+                <iframe width="560" height="315" src="//www.youtube.com/embed/RyfdRAYv4qo?rel=0" frameborder="0" allowfullscreen></iframe>
+              </div>
+            </div>
+          </li>
+          <li>
+            <time class="cbp_tmtime"><span>Video</span></time>
+            <div class="cbp_tmicon cbp_tmicon-phone"></div>
+            <div class="cbp_tmlabel">
+              <h2>Linking External Sites</h2>
+              <div class="videoWrapper">
+                <iframe width="560" height="315" src="//www.youtube.com/embed/4mvcR4qQj6U?rel=0" frameborder="0" allowfullscreen></iframe>
               </div>
             </div>
           </li>
 
           <li>
-            <time class="cbp_tmtime"><span>Challenge 2</span></time>
+            <time class="cbp_tmtime"><span>Challenge 4</span></time>
 
             <div class="cbp_tmlabel">
               <h2>Try this!</h2>
               <p>Using <a href="//www.codio.com" target="_blank">Codio</a> create a website that is structured like the following:</p>
-              <img src="assets/images/challenge-pics/chal3.png" alt="Challenge 3">
+              <img src="assets/images/challenge-pics/chal4.png" alt="Challenge 3">
               <br><br>
               <p>Requirements</p>
               <ul>
                 <li>Use a pattern for the background</li>
+                <li>Center everything in the body</li>
                 <li>Use one of the h-tags for the page title</li>
-                <li>At least one ol and ul tag on the page</li>
-                <li>Use a smaller h-tag as a header for the ol and ul tags</li>
-                <li>At least one picture of your desert</li>
-                <li>Fix the width of the img and p tags so it doesn't look awkward</li>
+                <li>Link the artist pictures to their Wiki page</li>
+                <li>Link the artist/song name to their respective YouTube video</li>
               </ul>
               
             </div>
@@ -61,7 +80,7 @@
 
             <div class="cbp_tmlabel">
               <h2>Do this before next class!</h2>
-              <p>No homework today!</p>
+              <p>Finish all the challenges up to and including Challenge 4 before Thursday!</p>
             </div>
           </li>
         </ul>
