--- a/public/synergy.html
+++ b/public/synergy.html
@@ -67,20 +67,21 @@
         <h2>Class 3</h2>
         <p>In this project, you will learn how to make lists.</p>
         <a href="/class3" class="dsk-link">Required</a> 
-        <a href="/#" class="dsk-link">Bonus</a>       </div>
+        <a href="/#" class="dsk-link">Bonus</a>       
+      </div>
       <img src="assets/images/timeline-thumbnails/day3.png" alt="" /> 
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">11/7</div>
+    <div class="dsk-circle dsk-circle-highlight">11/7</div>
     <h2 class="dsk-circle-title">Class 4</h2>
     <div class="dsk-content">
       <div class="dsk-info">
         <h2>Class 4</h2>
-        <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-        <a href="#" class="dsk-link">OK</a> 
-      </div>
-      <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+        <p>This is where things start to get really fun. Learn about centering, borders, and linking outside pages!</p>
+        <a href="/class4" class="dsk-link">Required</a> 
+        <a href="/#" class="dsk-link">Bonus</a>          </div>
+      <img src="assets/images/timeline-thumbnails/day4.png" alt="" /> 
     </div>
   </div>
   <div class="step">
