added challenge ids for easy linking

--- a/public/class2.html
+++ b/public/class2.html
@@ -73,7 +73,7 @@
 
             </div>
           </li>
-          <li>
+          <li id="challenge2">
             <time class="cbp_tmtime"><span>Challenge 2</span></time>
 
             <div class="cbp_tmlabel">
