--- a/public/class3.html
+++ b/public/class3.html
@@ -36,8 +36,8 @@
             </div>
           </li>
 
-          <li>
-            <time class="cbp_tmtime"><span>Challenge 2</span></time>
+          <li id="challenge3">
+            <time class="cbp_tmtime"><span>Challenge 3</span></time>
 
             <div class="cbp_tmlabel">
               <h2>Try this!</h2>
