--- a/public/class4.html
+++ b/public/class4.html
@@ -51,12 +51,12 @@
             <div class="cbp_tmlabel">
               <h2>Linking External Sites</h2>
               <div class="videoWrapper">
-                <iframe width="560" height="315" src="//www.youtube.com/embed/4mvcR4qQj6U?rel=0" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="//www.youtube.com/embed/oKjLV2TCzv4?rel=0" frameborder="0" allowfullscreen></iframe>
               </div>
             </div>
           </li>
 
-          <li>
+          <li id="challenge4">
             <time class="cbp_tmtime"><span>Challenge 4</span></time>
 
             <div class="cbp_tmlabel">
