Added new Park Century class

--- a/public/classes.html
+++ b/public/classes.html
@@ -151,6 +151,12 @@
                     <td class="td-valign">Live Online Class</td>
                     <td class="text-right"><button href="#myModal6" id="openBtn" data-toggle="modal" class="btn btn-default">More info</button></td>
                   </tr>
+                  <tr>
+                    <td class="td-valign">11/17/2014</td>
+                    <td class="td-valign">Mondays @ 3PM</td>
+                    <td class="td-valign">Park Century School (Park Century students only)</td>
+                    <td class="text-right"><button href="#myModal8" id="openBtn" data-toggle="modal" class="btn btn-default">More info</button></td>
+                  </tr>
 
                 </tbody>
               </table>
@@ -626,6 +632,77 @@
                   </div>
                   <div class="modal-footer">
                     <a href="http://www.eventbrite.com/e/middle-school-coding-class-park-century-school-tickets-13029402293" class="btn btn-primary btn-large" target="_blank">Enroll now!</a>
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div>
+
+            <div class="modal fade" id="myModal8">
+              <div class="modal-dialog modal-custom">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <img src="assets/images/logo-side-2.png" alt="" id="class-modal-img">
+                  </div>
+                  <div class="modal-body">
+                    <h3>Schedule</h3>
+                    <table class="table table-striped" id="tblGrid">
+                      <thead id="tblHead">
+                        <tr>
+                          <th>Date</th>
+                          <th>Day</th>
+                          <th>Time (PDT)</th>
+                          <th>Location</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>Nov 17</td>
+                          <td>Tues</td>
+                          <td>3:00 - 4:30pm</td>
+                          <td><a href="https://goo.gl/maps/2jRYg" target="_blank">Park Century School, 3939 Landmark St, Culver City, CA 90232</a></td>
+                        </tr>
+                        <tr>
+                          <td>Dec 1</td>
+                          <td>Tues</td>
+                          <td>3:00 - 4:30pm</td>
+                          <td><a href="https://goo.gl/maps/2jRYg" target="_blank">Park Century School, 3939 Landmark St, Culver City, CA 90232</a></td>
+                        </tr>
+                        <tr>
+                          <td>Dec 18</td>
+                          <td>Tues</td>
+                          <td>3:00 - 4:30pm</td>
+                          <td><a href="https://goo.gl/maps/2jRYg" target="_blank">Park Century School, 3939 Landmark St, Culver City, CA 90232</a></td>
+                        </tr>
+                        <tr>
+                          <td>Dec 15</td>
+                          <td>Tues</td>
+                          <td>3:00 - 4:30pm</td>
+                          <td><a href="https://goo.gl/maps/2jRYg" target="_blank">Park Century School, 3939 Landmark St, Culver City, CA 90232</a></td>
+                        </tr>
+                        <tr>
+                          <td>Jan 5</td>
+                          <td>Tues</td>
+                          <td>3:00 - 4:30pm</td>
+                          <td><a href="https://goo.gl/maps/2jRYg" target="_blank">Park Century School, 3939 Landmark St, Culver City, CA 90232</a></td>
+                        </tr>
+                        <tr>
+                          <td>Jan 12</td>
+                          <td>Tues</td>
+                          <td>3:00 - 4:30pm</td>
+                          <td><a href="https://goo.gl/maps/2jRYg" target="_blank">Park Century School, 3939 Landmark St, Culver City, CA 90232</a></td>
+                        </tr>
+                        <tr>
+                          <td>Jan 26</td>
+                          <td>Tues</td>
+                          <td>3:00 - 4:30pm</td>
+                          <td><a href="https://goo.gl/maps/2jRYg" target="_blank">Park Century School, 3939 Landmark St, Culver City, CA 90232</a></td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <div class="modal-footer">
+                    <a href="http://www.eventbrite.com/e/middle-school-coding-class-park-century-school-park-century-students-only-tickets-14303711787" class="btn btn-primary btn-large" target="_blank">Enroll now!</a>
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
