--- a/public/class1.html
+++ b/public/class1.html
@@ -82,7 +82,7 @@
                 <li>Using Google image search, find a link to a picture of each of your 3 favorite things</li>
               </ol>
               <p>Once you're done, email sentences and the links of the pictures to <a href="mailto:review@mushroomlearning.com?Subject=Homework%201" target="_blank">review@mushroomlearning.com</a> with the subject line "Homework 1"</p>
-              <p><strong>Due before midnight on Wednesday, October 29.</strong></p>
+              <p><strong>Due before midnight next class!</strong></p>
             </div>
           </li>
         </ul>
