--- a/public/class2.html
+++ b/public/class2.html
@@ -103,7 +103,7 @@
                 <li>Using Google image search, find the <strong>image url</strong> of a nice picture of the dessert. Note that I want the image url, not the actual image.</li>
               </ol>
               <p>Once you're done, send it to <a href="mailto:review@mushroomlearning.com?Subject=Homework%201" target="_blank">review@mushroomlearning.com</a> with the subject line "Homework 2"</p>
-              <p><strong>Due before midnight on Wednesday, November 5.</strong></p>
+              <p><strong>Due before class next week!</strong></p>
             </div>
           </li>
         </ul>
