--- a/public/maimonides.html
+++ b/public/maimonides.html
@@ -35,7 +35,7 @@
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">11/5</div>
+    <div class="dsk-circle dsk-circle-highlight">11/5</div>
     <div class="dsk-content">
       <div class="dsk-info">
         <h2>Class 1 -- Getting Started</h2>
@@ -47,7 +47,7 @@
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">11/12</div>
+    <div class="dsk-circle dsk-circle-highlight">11/12</div>
     <h2 class="dsk-circle-title">Class 2</h2>
     <div class="dsk-content">
       <div class="dsk-info">
@@ -60,27 +60,28 @@
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">11/19</div>
+    <div class="dsk-circle dsk-circle-highlight">11/19</div>
     <h2 class="dsk-circle-title">Class 3</h2>
     <div class="dsk-content">
       <div class="dsk-info">
         <h2>Class 3</h2>
-        <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-        <a href="#" class="dsk-link">OK</a> 
+        <p>In this project, you will learn how to make lists.</p>
+        <a href="/class3" class="dsk-link">Required</a> 
+        <a href="/#" class="dsk-link">Bonus</a>       
       </div>
-      <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+      <img src="assets/images/timeline-thumbnails/day3.png" alt="" /> 
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">11/26</div>
+    <div class="dsk-circle dsk-circle-highlight">11/26</div>
     <h2 class="dsk-circle-title">Class 4</h2>
     <div class="dsk-content">
       <div class="dsk-info">
         <h2>Class 4</h2>
-        <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-        <a href="#" class="dsk-link">OK</a> 
-      </div>
-      <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+        <p>This is where things start to get really fun. Learn about centering, borders, and linking outside pages!</p>
+        <a href="/class4" class="dsk-link">Required</a> 
+        <a href="/#" class="dsk-link">Bonus</a>          </div>
+      <img src="assets/images/timeline-thumbnails/day4.png" alt="" /> 
     </div>
   </div>
   <div class="step">
