--- a/public/class4.html
+++ b/public/class4.html
@@ -55,6 +55,16 @@
               </div>
             </div>
           </li>
+          <li>
+            <time class="cbp_tmtime"><span>Video</span></time>
+            <div class="cbp_tmicon cbp_tmicon-phone"></div>
+            <div class="cbp_tmlabel">
+              <h2>Hovers</h2>
+              <div class="videoWrapper">
+                <iframe width="560" height="315" src="//www.youtube.com/embed/C9cTCpUCBaQ?rel=0" frameborder="0" allowfullscreen></iframe>
+              </div>
+            </div>
+          </li>
 
           <li id="challenge4">
             <time class="cbp_tmtime"><span>Challenge 4</span></time>
@@ -62,7 +72,7 @@
             <div class="cbp_tmlabel">
               <h2>Try this!</h2>
               <p>Using <a href="//www.codio.com" target="_blank">Codio</a> create a website that is structured like the following:</p>
-              <img src="assets/images/challenge-pics/chal4.png" alt="Challenge 3">
+              <img src="assets/images/challenge-pics/chal4.gif" alt="Challenge 4">
               <br><br>
               <p>Requirements</p>
               <ul>
@@ -71,6 +81,8 @@
                 <li>Use one of the h-tags for the page title</li>
                 <li>Link the artist pictures to their Wiki page</li>
                 <li>Link the artist/song name to their respective YouTube video</li>
+                <li>Add borders to all the pictures</li>
+                <li>Change the hover effects on the borders and a tags</li>
               </ul>
               
             </div>
